data/all_generated_tests/raw_wast_tests/call_indirect_InvalidorInconsistentControlFlowGraph_4416.wast
;; 5. **Test Multiple `call_indirect` Instructions with Edge Cases**:    - Implement multiple `call_indirect` instructions with varying use cases such as:      - Valid calls      - Calls with mismatched types      - Out-of-bound indices      - Insufficient stack operands    - This ensures that `call_indirect` behaves well across different CFG branches and edge cases, validating robustness in error handling and incorrect CFG interpolation.

(assert_invalid
  (module
    (type (func (param i32 i32) (result i32)))
    (type (func (param i32) (result i32)))
    (table 2 funcref)
    (elem (i32.const 0) 0 1)
    (func $valid_func (param i32 i32) (result i32) (i32.add (local.get 0) (local.get 1)))
    (func $mismatch_func (param i32) (result i32) (local.get 0))
    (func $test_func
      (i32.const 0) 
      (call_indirect (type 0) (i32.const 0) (i32.const 10) (i32.const 20))
      drop
      (i32.const 1)
      (call_indirect (type 1) (i32.const 1) (i32.const 30))
    )
  )
  "type mismatch"
)